# baseball

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
api/: .env.local  .eslintrc.json  nodemon.json  package-lock.json  package.json  tsconfig.json
configs/: baserunning.yaml  betting_lines.yaml  bullpen_availability.yaml  career_encoder.yaml  config.example.yaml  event_model.yaml  game_predictor.yaml  park_factors.yaml  park_history.yaml  player_encoder.yaml  set_pooling.yaml  train_event_model.yaml  train_game_predictor.yaml
logs/: pretrain_encoder.csv  train_event_model_full.csv  train_event_model_no_context.csv  train_game_predictor.csv
reports/: system_report.html
src/: device.py  resumable_job.py
tests/: manual_shape_check.py  manual_shape_check_long_history.py  test_backtest.py  test_baserunning.py  test_betting_sim.py  test_bootstrap_compare.py  test_build_betting_lines.py  test_build_features.py  test_build_plate_appearances.py  test_bullpen_availability.py  test_contact_quality.py  test_device.py  test_ensemble_artifacts.py  test_event_dataset.py  test_event_embedding_cache.py  test_event_model.py  test_fetch_sprint_speed.py  test_fetch_statcast.py  test_game_dataset.py  test_game_engine.py  test_game_predictor.py  test_hook_model.py  test_long_history_encoder.py  test_park_factors.py  test_park_history.py  test_player_encoder.py  test_predict_upcoming.py  test_pretrain_encoder.py  test_pretrain_long_history_encoder.py  test_resumable_job.py  test_sequence_dataset.py  test_set_pooling.py  test_smoke.py  (+5 more)
(+169 files in other folders)
