[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball"
version = "0.1.0"
description = "Predicts MLB game outcomes from pitch-level history"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
